# alpaka

./: .appveyor.yml  .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  .zenodo.json  AbsCudaBuiltIn_8hpp.html  AbsCudaBuiltIn_8hpp_source.html  AbsHipBuiltIn_8hpp.html  AbsHipBuiltIn_8hpp_source.html  AbsStdLib_8hpp.html  AbsStdLib_8hpp_source.html  AbsStl_8hpp.html  AbsStl_8hpp_source.html  AbsUniformCudaHipBuiltIn_8hpp.html  AbsUniformCudaHipBuiltIn_8hpp_source.html  Abstract_8md.html  Abstract_8md_source.html  Abstraction_8md.html  Abstraction_8md_source.html  AccCpuFibers_8hpp.html  AccCpuFibers_8hpp_source.html  AccCpuOmp2Blocks_8hpp.html  AccCpuOmp2Blocks_8hpp_source.html  AccCpuOmp2Threads_8hpp.html  AccCpuOmp2Threads_8hpp_source.html  AccCpuOmp4_8hpp.html  AccCpuOmp4_8hpp_source.html  AccCpuSerial_8hpp.html  AccCpuSerial_8hpp_source.html  AccCpuSyclIntel_8hpp.html  AccCpuSyclIntel_8hpp_source.html  AccCpuSycl_8hpp.html  AccCpuSycl_8hpp_source.html  AccCpuTbbBlocks_8hpp.html  AccCpuTbbBlocks_8hpp_source.html  AccCpuThreads_8hpp.html  (+22984 more)
example/: CMakeLists.txt
example/babelstream/: CMakeLists.txt
example/babelstream/src/: AlpakaStream.cpp  AlpakaStream.h  CUPLAStream.cpp  CUPLAStream.h  Stream.h  main.cpp
example/bufferCopy/: CMakeLists.txt
example/bufferCopy/src/: bufferCopy.cpp
example/complex/: CMakeLists.txt
example/complex/src/: complex.cpp
example/conv2DWithMdspan/: CMakeLists.txt
example/conv2DWithMdspan/src/: conv2DWithMdspan.cpp
example/convolution1D/: CMakeLists.txt
example/convolution1D/src/: convolution1D.cpp
example/convolution2D/: CMakeLists.txt
example/convolution2D/src/: convolution2D.cpp
example/counterBasedRng/: CMakeLists.txt
example/counterBasedRng/src/: counterBasedRng.cpp
example/heatEquation/: CMakeLists.txt
example/heatEquation/src/: heatEquation.cpp  heatEquationCPU.cpp
example/heatEquation2D/: CMakeLists.txt
example/heatEquation2D/src/: analyticalSolution.hpp  heatEquation2D.cpp  writeImage.hpp
example/helloWorld/: CMakeLists.txt
example/helloWorld/src/: helloWorld.cpp  helloworld.cpp
example/helloWorldGridSync/: CMakeLists.txt
example/helloWorldGridSync/src/: helloWorldGridSync.cpp
example/helloWorldLambda/: CMakeLists.txt
example/helloWorldLambda/src/: helloWorldLambda.cpp
example/kernelSpecialization/: CMakeLists.txt
example/kernelSpecialization/src/: kernelSpecialization.cpp
example/ls/: CMakeLists.txt
example/ls/src/: ls.cpp
example/matrixMulWithMdspan/: CMakeLists.txt
example/matrixMulWithMdspan/src/: matrixMulMdSpan.cpp
example/monteCarloIntegration/: CMakeLists.txt
example/monteCarloIntegration/src/: monteCarloIntegration.cpp
example/openMPSchedule/: CMakeLists.txt
example/openMPSchedule/src/: openMPSchedule.cpp
example/parallelLoopPatterns/: CMakeLists.txt
example/parallelLoopPatterns/src/: parallelLoopPatterns.cpp
example/randomCells1D/: CMakeLists.txt
example/randomCells1D/src/: randomCells1D.cpp
example/randomCells2D/: CMakeLists.txt
example/randomCells2D/src/: randomCells2D.cpp
example/randomStrategies/: CMakeLists.txt
example/randomStrategies/src/: randomStrategies.cpp
example/reduce/: CMakeLists.txt  README.md
example/reduce/src/: alpakaConfig.hpp  appHelper.hpp  iterator.hpp  kernel.hpp  reduce.cpp
example/tagSpecialization/: CMakeLists.txt
example/tagSpecialization/src/: tagSpecialization.cpp
example/vectorAdd/: CMakeLists.txt
example/vectorAdd/src/: main.cpp  vectorAdd.cpp
examples/sharedMem/: CMakeLists.txt
examples/sharedMem/src/: main.cpp
examples/vectorAdd/: CMakeLists.txt
examples/vectorAdd/src/: main.cpp
test/: CMakeLists.txt  sanitizer_ubsan_blacklist.txt
test/analysis/: CMakeLists.txt
test/analysis/headerCheck/: CMakeLists.txt
test/analysis/headerCheck/src/: main.cpp
test/basic/: CMakeLists.txt
test/basic/src/: main.cpp
test/benchmark/: CMakeLists.txt
test/benchmark/rand/: CMakeLists.txt
test/benchmark/rand/src/: randBenchmark.cpp
test/catch_main/: CMakeLists.txt
test/common/: CMakeLists.txt  commonConfig.cmake  devCompileOptions.cmake
test/integ/: CMakeLists.txt
test/integ/axpy/: CMakeLists.txt
test/integ/axpy/src/: axpy.cpp  main.cpp
test/integ/copyView/: CMakeLists.txt
test/integ/copyView/src/: main.cpp
test/integ/cudaOnly/: CMakeLists.txt
test/integ/cudaOnly/src/: cudaNativeFunctions.cpp  main.cpp
test/integ/hostOnlyAPI/: CMakeLists.txt
test/integ/hostOnlyAPI/src/: hostOnlyAPI.cpp
test/integ/mandelbrot/: CMakeLists.txt
test/integ/mandelbrot/src/: main.cpp  mandelbrot.cpp
test/integ/matMul/: CMakeLists.txt
test/integ/matMul/src/: main.cpp  matMul.cpp
test/integ/separableCompilation/: CMakeLists.txt
test/integ/separableCompilation/include/: mysqrt.hpp
test/integ/separableCompilation/src/: main.cpp  mysqrt.cpp
test/integ/sharedMem/: CMakeLists.txt
test/integ/sharedMem/src/: main.cpp  sharedMem.cpp
test/integ/vectorAdd/: CMakeLists.txt
test/integ/vectorAdd/src/: main.cpp
test/integ/zeroDimBuffer/: CMakeLists.txt
test/integ/zeroDimBuffer/src/: zeroDimBuffer.cpp
test/mandelbrot/: CMakeLists.txt
test/mandelbrot/src/: main.cpp
test/matMul/src/: main.cpp  main.cu
test/matmul/: CMakeLists.txt
test/matmul/src/: main.cpp
test/sharedMem/src/: main.cpp
test/unit/: CMakeLists.txt
test/unit/acc/: CMakeLists.txt
test/unit/atomic/: CMakeLists.txt
test/unit/core/: CMakeLists.txt
test/unit/dev/: CMakeLists.txt
test/unit/event/: CMakeLists.txt
test/unit/exec/: CMakeLists.txt
test/unit/idx/: CMakeLists.txt
test/unit/intrinsic/: CMakeLists.txt
test/unit/kernel/: CMakeLists.txt
test/unit/math/: CMakeLists.txt  dataGen.hpp
test/unit/mem/: CMakeLists.txt
test/unit/meta/: CMakeLists.txt
test/unit/queue/: CMakeLists.txt
test/unit/rand/: CMakeLists.txt
test/unit/stream/: CMakeLists.txt
test/unit/time/: CMakeLists.txt
test/unit/traits/: CMakeLists.txt
test/unit/vec/: CMakeLists.txt
test/unit/warp/: CMakeLists.txt
test/unit/workDiv/: CMakeLists.txt
test/vectorAdd/src/: main.cpp
(+1792 files in other folders)
